Fikset litt mer paa bruker profil. Det gar ikke an a sende bilde med ajax, maa finne en annen loosning. Gir bare tilgang til aa bytte epost i foorste omgang

--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,10 @@ color: #b82f11;
 	width:525px;
 }
 
+#profile_buttons {
+	padding-top: 10px;
+}
+
 a:link, a:visited, a:hover, a:active {
 	text-decoration:none;
 	color: #b82f11;
