--- a/css/lightbox.css
+++ b/css/lightbox.css
@@ -1,28 +1,41 @@
 #lightbox {  
- display:none;  
- background:#000000;  
- opacity:0.8;  
- position:absolute;  
- top:0px;  
- bottom:0px;
- left:0px;  
- min-width:100%;  
- min-height:100%;  
+ 	display:none;  
+ 	background:#000000;  
+ 	opacity:0.8;  
+ 	position:absolute;  
+ 	top:0px;  
+ 	bottom:0px;
+ 	left:0px;  
+ 	min-width:100%;  
+ 	min-height:100%;  
 
 }
 
 
-#panel, #user_panel, .feedback_panel, .statistics_panel {  
- display:none;  
- position:fixed;  
- top:100px;  
- left:50%;  
- margin-left:-300px;  
- width:600px;  
- background:#FFFFFF;  
- padding:10px 15px 10px 15px;  
- border:2px solid #CCCCCC;  
- z-index:1001;  
+#panel, #user_panel, .feedback_panel, .statistics_panel  {  
+ 	display:none;  
+ 	position:fixed;  
+ 	top:100px;  
+ 	left:50%;  
+ 	margin-left:-300px;  
+ 	width:600px;  
+ 	background:#FFFFFF;  
+ 	padding:10px 15px 10px 15px;  
+ 	border:2px solid #CCCCCC;  
+ 	z-index:1001;  
+}	
+
+.post_user_panel {
+	display:none;  
+ 	position:fixed;  
+ 	top:100px;  
+ 	left:50%;  
+ 	margin-left:-300px;  
+ 	width:600px;  
+ 	background:#FFFFFF;  
+ 	padding:10px 15px 10px 15px;  
+ 	border:6px solid #CCCCCC;
+ 	z-index:1001;  
 }
 
 .feedback_panel {  
