Fikset kosmetiske endringer naa. Fikset ogsaa slik at hvis man trykker utenfor boksen som dukker opp lukkes denne boksen. Begynner naa aa jobbe med aa gjore det slik at brukeren kan legge til kommentarer

--- a/css/lightbox.css
+++ b/css/lightbox.css
@@ -12,7 +12,7 @@
 }
 
 
-#panel, #user_panel, .feedback_panel, .statistics_panel  {  
+#panel, #user_panel  {  
  	display:none;  
  	position:fixed;  
  	top:100px;  
@@ -25,7 +25,7 @@
  	z-index:1001;  
 }	
 
-.post_user_panel {
+.post_user_panel, .feedback_panel, .statistics_panel {
 	display:none;  
  	position:fixed;  
  	top:100px;  
