--- a/css/lightbox.css
+++ b/css/lightbox.css
@@ -11,21 +11,7 @@
 
 }
 
-
-#panel, #user_panel  {  
- 	display:none;  
- 	position:fixed;  
- 	top:100px;  
- 	left:50%;  
- 	margin-left:-300px;  
- 	width:600px;  
- 	background:#FFFFFF;  
- 	padding:10px 15px 10px 15px;  
- 	border:2px solid #CCCCCC;  
- 	z-index:1001;  
-}	
-
-.post_user_panel, .feedback_panel, .statistics_panel {
+.post_user_panel, .feedback_panel, .statistics_panel, #new_post_panel, #user_panel {
 	display:none;  
  	position:fixed;  
  	top:100px;  
