--- a/css/style.css
+++ b/css/style.css
@@ -343,17 +343,17 @@ a:active {text-decoration:underline;}
 
 
 #search {
-	position:absolute;
- 	top:40px;
- 	right:75px;
- 	width:200px;
+	position: absolute;
+ 	top: 40px;
+ 	right: 78px;
+ 	width: 200px;
 }
 .form-wrapper #search {
         width: 330px;
         height: 20px;
-        padding: 10px 5px;
+        padding: 10px 5px 5px 5px
         float: left;
-        font: bold 16px 'lucida sans', 'trebuchet MS', 'Tahoma';
+        font: 16px 'lucida sans', 'trebuchet MS', 'Tahoma';
         border: 1px solid #ccc;
         -moz-box-shadow: 0 1px 1px #ddd inset, 0 1px 0 #fff;
         -webkit-box-shadow: 0 1px 1px #ddd inset, 0 1px 0 #fff;
