--- a/css/style.css
+++ b/css/style.css
@@ -91,9 +91,10 @@ h2 {
 	position: relative;
 	height: auto;
 	width: auto;
-	bottom: 18px;
+	bottom: 28px;
 	float: left;
-	margin-left: 18px;
+	margin-left: 12px;
+	font-family: 'Patrick Hand', cursive;
 }
 
 #nav {
