Fiksa saa baade tekst og bilde linker til 'skriv inlegg'. Fiksa css p innlegg foroevrig

--- a/css/style.css
+++ b/css/style.css
@@ -240,12 +240,12 @@ h2 {
 	margin-left: 25px;
 }
 
-.post_comment, .post_statistic, .post_statistic_button, .comment_feedback_button, .comment_statistic_button {
+.post_comment_button, .post_statistic, .post_statistic_button, .post_feedback_button, .post_statistic_button {
 	float: left;
 	margin-left: 25px;
 }
 
-.post_feedback p, .post_comment p, .post_statistic p, .post_statistic_button p {
+.post_feedback p, .post_comment_button p, .post_statistic p, .post_statistic_button p {
 font-size: 0.8em;
 color: #ba330d;
 }
