--- a/css/style.css
+++ b/css/style.css
@@ -392,7 +392,7 @@ color: #ba330d;
 	float:right;
 }
 
-.delete_comment_button {
+.delete_comment_button, .delete_post_button {
 	width: 25px;
 	height:25px;
 	padding: 5px;
