--- a/css/style.css
+++ b/css/style.css
@@ -240,13 +240,17 @@ h2 {
 	margin-left: 25px;
 }
 
-.post_comment_button, .post_statistic, .post_statistic_button, .post_feedback_button, .post_statistic_button, .comment_feedback, .comment_statistics{
+.post_comment_button, .post_statistic, .post_statistic_button, .post_feedback_button, .post_statistic_button, .comment_report, .comment_feedback, .comment_statistics, .edit_comment {
 	float: left;
 	margin-left: 25px;
 }
 
-.comment_feedback {
-	margin-right: 50px;
+.comment_feedback, .comment_report, .edit_comment {
+	margin-right: 30px;
+}
+
+.comment_report_button, .comment_statistic_button, .comment_feedback_button, .edit_comment_button {
+	padding-left: 7px;
 }
 
 #comment_content {
@@ -260,7 +264,7 @@ h2 {
 }
 
 
-.post_feedback p, .post_comment_button p, .post_statistic p, .post_statistic_button p {
+.post_feedback p, .post_comment_button p, .post_statistic p, .post_statistic_button p, .edit_comment p, .comment_statistic p, .comment_feedback p, .comment_report p {
 font-size: 0.8em;
 color: #ba330d;
 }
