--- a/css/style.css
+++ b/css/style.css
@@ -240,7 +240,7 @@ h2 {
 	margin-left: 25px;
 }
 
-.post_comment_button, .post_statistic,  .post_feedback, .post_statistic, .comment_report, .comment_feedback, .comment_statistics, .edit_comment, .post_report {
+.post_comment_button, .post_statistic,  .post_feedback, .post_statistic, .comment_report, .comment_feedback, .comment_statistics, .edit_comment, .post_report, .post_edit {
 	float: left;
 	margin-left: 25px;
 }
@@ -264,7 +264,7 @@ h2 {
 }
 
 
-.post_feedback p, .post_comment_button p, .post_statistic p, .post_statistic_button p, .edit_comment p, .comment_statistic p, .comment_feedback p, .comment_report p, .post_report p {
+.post_feedback p, .post_comment_button p, .post_statistic p, .post_statistic_button p, .edit_comment p, .comment_statistic p, .comment_feedback p, .comment_report p, .post_report p, .post_edit p {
 	font-size: 0.8em;
 	color: #ba330d;
 }
