--- a/css/style.css
+++ b/css/style.css
@@ -235,14 +235,11 @@ h2 {
 	width: 60%;
 }
 
-.post_feedback {
-	float: left;
-	margin-left: 25px;
-}
 
 .post_comment_button, .post_statistic,  .post_feedback, .post_statistic, .comment_report, .comment_feedback, .comment_statistics, .edit_comment, .post_report, .post_edit {
 	float: left;
 	margin-left: 25px;
+	text-align: center;
 }
 
 .comment_feedback, .comment_report, .edit_comment {
@@ -267,6 +264,7 @@ h2 {
 .post_feedback p, .post_comment_button p, .post_statistic p, .post_statistic_button p, .edit_comment p, .comment_statistic p, .comment_feedback p, .comment_report p, .post_report p, .post_edit p {
 	font-size: 0.8em;
 	color: #ba330d;
+	margin-top: 0;
 }
 
 .post h2 {
