La til bakgrunnsbilde (i utgangspunktet bare en test)

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 ﻿body {
 	font-family: Helvetica, Tahoma, Arial, sans-serif;
 	color: #b82f11;
+	background-image: url('../images/dust.png');
 }
 
 p, label {
