Fikset tilbake knapp i sidebar2

--- a/css/style.css
+++ b/css/style.css
@@ -457,6 +457,11 @@ a:active {text-decoration:underline;}
  	width: 200px;
 }
 
+#back_to_start a {
+	color: white;
+	padding-left: 5px;
+}
+
 .form-wrapper #search {
         width: 330px;
         height: 20px;
