--- a/css/style.css
+++ b/css/style.css
@@ -182,7 +182,7 @@ h2 {
 	clear: both;
 	height: 130px; 
 	width: 100%; 
-	background-image: url(../images/footer_bg.jpg); 
+	background-image: url(../images/footer_bg.png); 
 	background-repeat: repeat-x;
 	text-align: center;
 }
