--- a/css/lightbox.css
+++ b/css/lightbox.css
@@ -14,6 +14,7 @@
 .post_user_panel, .feedback_panel, .statistics_panel, #new_post_panel, #user_panel, .comment_feedback_panel {
 	display:none;  
  	position:fixed;  
+ 	top:50px;
  	left:50%;  
  	margin-left:-300px;  
  	width:600px;  
